[package]
name = "combine-proc-macro"
version = "1.0.0"
authors = [
    "Kevin Stenerson <developer@stenerson.me>",
    "John Williams <jrw@google.com>",
]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kestred/combine-proc-macro"
documentation = "https://docs.rs/combine-proc-macro"
description = "Support for using `combine` parser combinators with the `proc_macro` API."
keywords = ["combine", "proc_macro", "macros"]
categories = ["parsing"]

[dependencies]
combine = { version = "4.6.2", features = ["std"] }
proc-macro2 = "1.0.32"
